<resources>
    <string name="app_name">"Where is my car "</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="login_failed">Login failed</string>
    <string name="loginBtnText">Login</string>
    <string name="registerBtnText">Register</string>
    <string name="passwordText">Password:</string>
    <string name="emailText">Email:</string>
    <string name="registerText">Registration failed !</string>
    <string name="add_a_new_car">Add a new Car</string>
    <string name="my_cars">My Cars</string>
    <string name="contact">Contact</string>
    <string name="exit">Exit</string>
    <string name="car_brand">Car Brand:</string>
    <string name="car_model">Car Model:</string>
    <string name="car_color">Car Color:</string>
    <string name="license_plate_no">License Plate No:</string>
    <string name="add">ADD</string>
    <string name="selectCarBrand">Select a car brand !</string>
    <string name="selectCarModel">Select a car model !</string>
    <string name="selectCarColor">Select a color !</string>
    <string name="selectLicensePlateNo">Type the license plate number:</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
